# Pinnacle-Sets

./: .gitignore  CMakeLists.txt  notes
include/: CompleteGraph.h  permutations.h
src/: CompleteGraph.cpp  graph.hpp  main.cpp  permutations.cpp
